--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:065c80beae71d813a7a68d2923f4a66c8afcfac3f765d460f3fb42542c333c24"
+  "signature": "sha256:b03620b004aa1dd9333fce5202ec142ae80be06b79c547e6d33bd213f86ba557"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1460,11 +1460,11 @@
      "source": [
       "## Vector differentiation cheatsheet\n",
       "\n",
+      "$\\renewcommand{p}{\\partial}$\n",
+      "\n",
       "* $A, a, b, \\bs c$ are constants (ie, not functions of $\\bs x$)\n",
       "* $\\bs {u=u(x), v=v(x)}, y=y(\\bs x)$ are functions of $\\bs x$\n",
       "* $O$ is the zero matrix, $I$ is the identity matrix\n",
-      "\n",
-      "$\\renewcommand{p}{\\partial}$\n",
       "\n",
       "| Expression | Results | Special Cases |\n",
       "| :------: | :-----: | :-----: |\n",
@@ -1472,7 +1472,7 @@
       "| $\\frac{\\p{A \\bs u}}{\\p \\bs x}$ |  $A\\frac{\\p{\\bs u}}{\\p \\bs x}$ | $\\frac{\\p{\\bs A x}}{\\p \\bs x} = A, \\frac{\\p{\\bs x^T A}}{\\p \\bs x} = A^T$ |\n",
       "| $\\frac{\\p{y \\bs u}}{\\p \\bs x}$ |  $y \\frac{\\p{\\bs u}}{\\p \\bs x} + \\bs u \\frac{\\p{y}}{\\p \\bs x}$ | - |\n",
       "| $\\frac{\\p \\bs{u}^T A \\bs v}{\\p \\bs x} $ |  $\\bs u^T A \\frac{\\p{\\bs v}}{\\p \\bs x}  +  \\bs v^T A^T \\frac{\\p{\\bs u}}{\\p \\bs x} $ |$\\frac{\\p \\bs{x}^T A \\bs x}{\\p \\bs x} = \\bs x^T (A + A^T) $, $\\frac{\\p \\bs{u^Tv}}{\\p \\bs x} =\\bs{u}^T\\frac{\\p \\bs{v}}{\\p \\bs x} + \\bs{v}^T\\frac{\\p \\bs{u}}{\\p \\bs x}$ |\n",
-      "| $\\frac{\\p{\\bs g(\\bs u})}{\\p \\bs x}$ |  $\\frac{\\p{\\bs g}}{\\p \\bs u} \\frac{\\p{\\bs u}}{\\p \\bs x} $ | chain rules of multiple steps,  $\\frac{\\p \\bs y}{\\p \\bs x}\\frac{\\p \\bs x}{\\p \\bs y} = \\id$  |\n",
+      "| $\\frac{\\p{\\bs g(\\bs u})}{\\p \\bs x}$ |  $\\frac{\\p{\\bs g}}{\\p \\bs u} \\frac{\\p{\\bs u}}{\\p \\bs x} $ | $\\frac{\\p \\bs y}{\\p \\bs x}\\frac{\\p \\bs x}{\\p \\bs y} = \\id$ , $\\frac{\\p \\bs y}{\\p \\bs x}\\frac{\\p \\bs x}{\\p \\bs y} = \\id$ |\n",
       "\n",
       "* Similar to  univariate calculus, a compact notation for mutlivariate calculus\n",
       "* Replace $A^T$ by $A^*$ for complex matrix"
