--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:3443a89066e975c52733a6bb7a4ef4bac16805a6a5d10370496f061ed532962f"
+  "signature": "sha256:d7a4cf16c5171f8b45d3c398e22b08dd522c81e5a4700428e1af18b5445421d5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1200,9 +1200,9 @@
       "$\\delta \\bs w$ have the desired correlation:\n",
       "$$\\mathbb{E}[\\delta \\bs w \\delta \\bs w^T] = \\mathbb{E}[L \\bs z \\bs z^T L^T] \\delta t = L \\mathbb{E}[\\bs z \\bs z^T] L^T \\delta t = LL^T \\delta t = C \\delta t$$\n",
       "\n",
-      "Equivalently, we can draw $\\Sigma \\delta \\bs w \\approx (\\Sigma L) \\bs z\\sqrt{\\delta t}$, where\n",
+      "Equivalently, we can draw $\\Sigma \\delta \\bs w = (\\Sigma L) \\bs z\\sqrt{\\delta t}$, where\n",
       "* $\\Sigma L$ is the Cholesky decomposition of the covariance matrix\n",
-      "$$ C = LL^T \\iff V = \\Sigma C \\Sigma = L\\Sigma (L\\Sigma)^T $$"
+      "$$ C = LL^T \\iff V = \\Sigma C \\Sigma = \\Sigma L (\\Sigma L)^T $$"
      ]
     },
     {
@@ -1440,7 +1440,7 @@
      "source": [
       "## Vector function \n",
       "\n",
-      "$$\\bs{ y(x) } = [y_1(\\bs x), ..., y_n(\\bs x)]^T$$\n",
+      "$$\\renewcommand{p}{\\partial}\\bs y(\\bs x)  = [y_1(\\bs x), ..., y_n(\\bs x)]^T$$\n",
       "\n",
       "* Deriative to vector (Jacobian matrix): $\\frac{\\partial \\bs y}{\\partial \\bs x} = \\left[\\frac{\\partial{y_1}}{\\partial \\bs x}, \\frac{\\partial{y_2}}{\\partial \\bs x}, \\cdots, \\frac{\\partial{y_n}}{\\partial \\bs x} \\right]^T$\n",
       " *  $\\frac{\\partial \\bs y}{\\partial \\bs x}$ is a matrix of $\\bs y$ rows and $\\bs x$ columns\n",
@@ -1460,7 +1460,6 @@
      "source": [
       "## Vector differentiation cheatsheet\n",
       "\n",
-      "$\\renewcommand{p}{\\partial}$\n",
       "\n",
       "* $A, a, b, \\bs c$ are constants (ie, not functions of $\\bs x$)\n",
       "* $\\bs {u=u(x), v=v(x)}, y=y(\\bs x)$ are functions of $\\bs x$\n",
@@ -1597,11 +1596,11 @@
      "source": [
       "## Relativity of return forecast\n",
       "\n",
-      "The optimal portfolio is invariant if $\\bs f$ is scaled by a scalar $a$:\n",
+      "The optimal portfolio unchanged if $\\bs f$ is scaled by a scalar $a$:\n",
       "\n",
-      "$$\\bs w(a\\bs f) = \\frac{1}{a} \\bs w(\\bs f)$$ \n",
+      "$$\\bs w^*(a\\bs f) = \\frac{1}{a} \\bs w^*(\\bs f)$$ \n",
       "\n",
-      "* $\\bs w$ and $\\frac{1}{a} \\bs w$ defines the same risky asset mix, with identical Sharp ratio\n",
+      "* $\\bs w^*$ and $\\frac{1}{a} \\bs w^*$ defines the same risky asset mix, with identical Sharp ratio\n",
       "\n",
       "\n",
       "Therefore, only the relative sizes of excess returns are important\n",
@@ -1618,13 +1617,13 @@
      "source": [
       "## Benchmark portfolio and $\\bs \\beta$\n",
       "\n",
-      "Benchmark portfolio is usually an index portfolio to measure the performane of active portfolio management. \n",
-      "\n",
-      "* $\\bs w_b$: a benchmark portfolio\n",
-      "  * The beta of a portfolio $\\bs w$ to the benchmark is $\\frac{\\text{cov}(\\bs w^T \\tilde{\\bs r}, \\bs w_b^T \\tilde{\\bs r})}{\\sigma_b^2} = \\frac{\\bs w^T V \\bs w_b^T}{\\sigma_b^2} = \\bs w^T \\bs \\beta_b$\n",
-      "  * Define $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $, the vector of individual assets' beta to the benchmark\n",
-      "  * $\\bs w_b^T \\bs \\beta_b = \\frac{\\bs w_b^T V\\bs w_b}{\\sigma^2_b} = {1}$, the benchmark portfolio itself has a beta of $1$\n",
-      "* $\\bs w_m$: the market portfolio, as defined in CAPM\n",
+      "Benchmark portfolio $\\bs w_b$ is usually an index portfolio to measure the performane of active portfolio management. \n",
+      "  * The beta of a portfolio $\\bs w$ to the benchmark is \n",
+      "  $$\\frac{\\text{cov}(\\bs w^T \\tilde{\\bs r}, \\bs w_b^T \\tilde{\\bs r})}{\\sigma_b^2} = \\frac{\\bs w^T V \\bs w_b}{\\sigma_b^2} = \\bs w^T \\bs \\beta_b$$\n",
+      "  * Define $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $, the vector of individual assets' betas\n",
+      "  * $\\bs w_b^T \\bs \\beta_b = \\frac{\\bs w_b^T V\\bs w_b}{\\sigma^2_b} = {1}$, the benchmark portfolio itself has a unit beta\n",
+      "  \n",
+      "$\\bs w_m$ is the market portfolio, as defined in CAPM\n",
       "  * $\\bs \\beta_m = \\frac{V\\bs w_m}{\\sigma^2_m}$: the betas vector to the market portfolio $\\bs w_m$"
      ]
     },
@@ -2186,7 +2185,7 @@
       }
      },
      "source": [
-      "* A few days later, there is a tiny change in covariance matrix, but ..."
+      "A few days later, there is a tiny change in covariance matrix, but"
      ]
     },
     {
@@ -2270,6 +2269,13 @@
       }
      ],
      "prompt_number": 132
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "the optimal portfolio is totally different, how is it posible?"
+     ]
     },
     {
      "cell_type": "markdown",
