--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -107,7 +107,7 @@
       "\n",
       "* We write the observed inputs as a matrix $X = [\\bs{x_1, x_2, ..., x_m}]^T$, and the observed outputs as an vector of $\\bs y = [y_1, ..., y_m]^T$\n",
       "* $X \\bs \\beta = \\bs y$ is over-determined, no vector $\\bs \\beta$ solves the linear system exactly\n",
-      "* Instead, we find $\\bs \\beta $ that minimizes $\\Vert X \\bs{\\beta - y}\\Vert_2$."
+      "* Instead, we find the $\\bs \\beta $ that minimizes $\\Vert X \\bs{\\beta - y}\\Vert_2$."
      ]
     },
     {
@@ -126,8 +126,7 @@
       "$$\\begin{array}{l}\n",
       "\\Vert X \\bs{\\beta - y} \\Vert_2^2 &= (X \\bs{\\beta - y})^T (X \\bs{\\beta - y}) \\\\\n",
       "&= \\bs{\\beta}^T X^T X \\bs{\\beta} - 2 \\bs{\\beta}^TX^T\\bs y + \\bs y^T\\bs y\\\\\n",
-      "\\frac{\\partial}{\\partial \\bs \\beta} \\Vert X \\bs{\\beta - y} \\Vert_2^2 &= 2 \\bs \\beta^T X^TX - 2\\bs y^T X = \\bs 0^T \\\\\n",
-      " X^TX \\bs \\beta &=  X^T \\bs y \\\\\n",
+      "\\frac{\\partial}{\\partial \\bs \\beta^T} \\Vert X \\bs{\\beta - y} \\Vert_2^2 &= 2 X^TX \\bs \\beta  - 2X^T \\bs y  = \\bs 0 \\\\\n",
       "\\bs \\beta &= (X^TX)^{-1}X^T\\bs y\n",
       "\\end{array}$$\n",
       "\n",
@@ -171,11 +170,11 @@
       "Ridge regression adds a magnitude penalty to the objective function of least square: \n",
       "\n",
       "$$\\begin{array}{l}  l(\\bs \\beta) &= \\Vert X \\bs{\\beta - y} \\Vert_2^2 + \\lambda \\Vert W \\bs \\beta \\Vert_2^2 \\\\ &=  \\bs{\\beta}^T X^T X \\bs{\\beta} - 2 \\bs{\\beta}^TX^T\\bs y + \\bs y^T \\bs y + \\lambda \\bs \\beta^T W^TW \\bs \\beta \\\\\n",
-      "\\frac{\\partial l}{\\partial \\bs \\beta} &= 2\\bs \\beta^T X^TX  - 2\\bs y^T X + 2 \\lambda \\bs \\beta^T W^T W = \\bs 0^T \\\\\n",
+      "\\frac{\\partial l}{\\partial \\bs \\beta^T} &= 2X^TX \\bs \\beta   - 2X^T \\bs y + 2 \\lambda W^T W \\bs \\beta = \\bs 0 \\\\\n",
       "\\bs \\beta &= (X^TX + \\lambda W^TW)^{-1}X^T\\bs y\n",
       "\\end{array}$$\n",
       "\n",
-      "* $W$ is a diagonal weighting for the elements in $\\bs \\beta$, e.g. $W = I$ is often a good start\n",
+      "* $W$ is a diagonal weighting matrix for the elements in $\\bs \\beta$, e.g. $W = I$ is often a good start\n",
       "* $\\lambda$ is a scaler penalty rate"
      ]
     },
@@ -276,7 +275,7 @@
      },
      "source": [
       "* ridge regression is more robust, it works even if $X$ is not fully ranked (colinearity)\n",
-      "* useful for constructing hedging portfolios"
+      "* often used for constructing hedging portfolios"
      ]
     },
     {
@@ -312,9 +311,9 @@
       "\n",
       "Eigen vector/value naming conventions:\n",
       "* eigenvectors are usually specified as unit L2 vectors of $\\Vert \\bs v \\Vert_2^2 = \\bs v^T \\bs v = 1$. \n",
-      "  * there are still ambuiguity between  $\\bs v$ and $- \\bs v$ \n",
+      "  * $\\bs v$ and $- \\bs v$ are equivalent unit eigenvectors\n",
       "* eigenvalues are named in descending order: $\\lambda_1 \\ge \\lambda_2 \\ge ... \\ge \\lambda_n $, their corresponding eigen vectors are $\\bs {v_1, v_2, ..., v_n}$ \n",
-      "  * can eigenvalues be negative? Yes, otherwise the matrix is positive definite."
+      "  * can eigenvalues be negative?"
      ]
     },
     {
@@ -334,8 +333,9 @@
       "\n",
       "$$ \\det(A - \\lambda I) = 0$$ \n",
       "\n",
-      "characteristic equation is a polynomial of degree $n$:\n",
+      "a polynomial equation of degree $n$:\n",
       "* there can be $n$ distinct eigenvalues at most\n",
+      "* eigenvalues can be negative or complex\n",
       "* $\\prod_{i}\\lambda_i = \\det( A )$\n",
       "* $\\sum_i\\lambda_i = \\text{tr}(A)$\n",
       "\n",
@@ -503,9 +503,45 @@
       "* $R$ is upper triangular, with the same dimension as $A$\n",
       "\n",
       "QR decomposition is numerically stable\n",
-      "* making EVD analysis of large matrices a routine practice\n",
+      "* making EVD analysis of large matrices a routine practice"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "$$\\underbrace{\\pmatrix{\n",
+      "* & * & * \\\\  \n",
+      "* & * & * \\\\  \n",
+      "* & * & * \\\\  \n",
+      "* & * & * \\\\  \n",
+      "* & * & * \\\\  \n",
+      "* & * & *  \n",
+      "}}_A = \n",
+      "\\underbrace{\\pmatrix{\n",
+      "* & * & * & * & * \\\\  \n",
+      "* & * & * & * & * \\\\  \n",
+      "* & * & * & * & * \\\\  \n",
+      "* & * & * & * & * \\\\  \n",
+      "* & * & * & * & * \\\\\n",
+      "* & * & * & * & * \n",
+      "}}_Q \n",
+      "\\;\\;\n",
+      "\\underbrace{\\pmatrix{\n",
+      "* & * & * \\\\ \n",
+      "0 & * & * \\\\ \n",
+      "0 & 0 & * \\\\\n",
+      "0 & 0 & 0 \\\\\n",
+      "0 & 0 & 0 \\\\\n",
+      "0 & 0 & 0 \n",
+      "}}_R$$\n",
       "\n",
-      "What if $A$ is not fully ranked?\n",
+      "\n",
+      "If $A$ is not fully ranked:\n",
       "* $Q$ remains full rank (as all orthogonal matrices)\n",
       "* $R$ have more 0 rows "
      ]
@@ -671,15 +707,16 @@
      "source": [
       "## Householder transformation\n",
       "\n",
-      "* an orthogonal transformation representing reflection over a hyper plane, with a normal vector $\\bs u$:\n",
+      "* an orthogonal transformation representing reflection over a hyper plane, with a normal vector $\\hat {\\bs u}$ with unit L-2 norm: $\\Vert \\hat{\\bs u} \\Vert_2 = \\sqrt{\\hat {\\bs u}^T \\hat {\\bs u}} = 1$:\n",
       "\n",
-      "$$ H = I - \\frac{2\\bs{uu}^T}{\\bs {(u^T u)^2}}$$\n",
+      "$$ H \\bs x = (I - {2\\bs{\\hat u \\hat u}^T}) \\bs x = \\bs x - 2 (\\hat{\\bs u}^T \\bs x) \\bs{\\hat u} $$\n",
       "\n",
       "* Household transformation can reflect an arbitrary vector $\\bs x$ to $ \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1$, where $\\hat{\\bs e}_1$ can be any unit vector. \n",
       "\n",
+      "$$ $$\n",
       "<center><img src = \"img/householder.png\" height=300 width=300></center>\n",
       "\n",
-      "* It is obvious from the figure that: $\\bs u = \\frac{1}{2}\\left(\\bs x - \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1\\right)$."
+      "* It is obvious from the figure that: $\\bs{\\hat u}$ must be in the direction of $\\bs u = \\frac{1}{2}\\left(\\bs x - \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1\\right)$."
      ]
     },
     {
@@ -964,7 +1001,9 @@
      "source": [
       "# Principal Component Analysis\n",
       "\n",
-      "Mahatma Gandhi: action expresses priorities. "
+      "Mahatma Gandhi: action expresses priorities. \n",
+      "\n",
+      "$\\renewcommand{bt}[1]{\\tilde{\\bs #1}}$"
      ]
     },
     {
@@ -979,11 +1018,11 @@
       "\n",
       "The principal component (PC):\n",
       "\n",
-      "* Suppose $\\bs r$ is a random vector, with expectation $\\bar{\\bs r} = \\mathbb{E}[\\bs r]$ and covariance matrix $ V = \\mathbb{E}[(\\bs r - \\bar{\\bs r})(\\bs r - \\bar{\\bs r})^T] $\n",
+      "* Suppose $\\tilde {\\bs r}$ is a random vector, with expectation $\\bar{\\bs r} = \\mathbb{E}[\\tilde{\\bs r}]$ and covariance matrix $ V = \\mathbb{E}[(\\bt r - \\bar{\\bs r})(\\bt r - \\bar{\\bs r})^T] $\n",
       "  * daily returns of a set of equities is an example of random vectors\n",
       "\n",
       "* PC is defined to be the direction $\\hat{\\bs u}$ onto which the projection $\\bs r^T \\hat{\\bs u}$ has the maximimum variance, \n",
-      "  * $\\hat{\\bs u}$ is a unit vector, i.e., $\\Vert \\hat{\\bs u} \\Vert_2 = \\hat{\\bs u}^T\\hat{\\bs u} = 1$"
+      "  * $\\hat{\\bs u}$ is a unit vector, i.e., $\\Vert \\hat{\\bs u} \\Vert_2 = \\sqrt{\\hat{\\bs u}^T\\hat{\\bs u}} = 1$"
      ]
     },
     {
@@ -1034,7 +1073,7 @@
      "source": [
       "## Link to eigenvectors\n",
       "\n",
-      "The projection of the random vector in the direction of $\\hat{\\bs u}$ is a random scalar $\\hat{\\bs u}^T \\bs r$\n",
+      "The projection of the random vector in the direction of $\\hat{\\bs u}$ is a random scalar $\\hat{\\bs u}^T \\bt r$\n",
       "\n",
       "* the variance of the projection is $\\text{var}[\\hat{\\bs u}^T \\bs r] = \\hat{\\bs u}^T V \\hat{\\bs u}$.\n",
       "* the first eigen vector $\\bs v_1$ of $V$ is therefore the principal component\n",
@@ -1734,7 +1773,7 @@
       "\n",
       "By convention, \n",
       "* we represent singular vectors as unit L-2 vectors, i.e., $\\bs u^T\\bs u = \\bs v^T \\bs v = 1$,\n",
-      "* we name the singular values in descending order as $\\sigma_1, \\sigma_2, ..., \\sigma_n$, and refer corresponding singular vector pairs as $\\bs{ (u_1, v_1), (u_2, v_2), ..., (u_n, v_n) }$."
+      "* we name the singular values in descending order as $\\sigma_1, \\sigma_2, ..., \\sigma_n$, and refer corresponding singular vector pairs as $ (\\bs u_1, \\bs v_1), (\\bs u_2, \\bs v_2), ..., (\\bs u_n, \\bs v_n) $."
      ]
     },
     {
@@ -1755,12 +1794,13 @@
       "\n",
       "$$\\small \\begin{array} \n",
       "\\\\l &= \\bs u^T M \\bs v - \\lambda_1 (\\bs u^T  \\bs u - 1) - \\lambda_2 (\\bs v^T  \\bs v - 1) \\\\\n",
-      "\\frac{\\partial l}{\\partial{\\bs u}} &= \\bs v^T M^T - 2 \\lambda_1 \\bs u^T = \\bs 0^T \\iff \\bs u^T M \\bs v - 2 \\lambda_1 = 0\\\\\n",
-      "\\frac{\\partial l}{\\partial{\\bs v}} &= \\bs u^T M - 2\\lambda_2 \\bs v^T = \\bs 0^T \\iff \\bs u^T M \\bs v- 2\\lambda_2 = 0\n",
+      "\\frac{\\partial l}{\\partial{\\bs u^T}} &= M \\bs v - 2 \\lambda_1 \\bs u = \\bs 0 \\iff \\bs u^T M \\bs v - 2 \\lambda_1 = \\bs 0\\\\\n",
+      "\\frac{\\partial l}{\\partial{\\bs v}} &= \\bs u^T M  - 2\\lambda_2 \\bs v^T = \\bs 0^T \\iff \\bs u^T M \\bs v- 2\\lambda_2 = \\bs 0\n",
       "\\end{array}$$\n",
       "\n",
       "Therefore,\n",
-      "$$\\small \\bs u^T M \\bs v = 2\\lambda_1 = 2\\lambda_2 \\iff M \\bs v = \\sigma \\bs u \\;,\\; M^T\\bs u = \\sigma \\bs v $$"
+      "$$ 2\\lambda_1 = \\small \\bs u^T M \\bs v  = 2\\lambda_2 $$\n",
+      "$$M \\bs v = \\sigma \\bs u \\;,\\; M^T\\bs u = \\sigma \\bs v $$"
      ]
     },
     {
