--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -100,14 +100,11 @@
       "\n",
       "Given an unknown scalar function $\\renewcommand{bs}{\\boldsymbol} y = y(\\boldsymbol x)$, where the argument $\\bs x$ is a $n$ dimensional vector.\n",
       "\n",
-      "* We have $m > n$ observations of the inputs and matching outputs:  $\\bs {x_1, x_2, ..., x_m}$ and $[y_1, ..., y_m]$. \n",
+      "* We have $m > n$ observations: $X$ represents inputs and $\\bs y$ represents outputs:\n",
+      " $$X = \\pmatrix{\\bs x_1 \\\\ \\bs x_2 \\\\ \\vdots \\\\ \\bs x_m}, \\;\\; \\bs y = \\pmatrix{y_1 \\\\ y_2 \\\\ \\vdots \\\\ y_m}$$\n",
       "* We want to find a factor loading vector $\\bs \\beta$ so that the linear function $\\hat y = \\bs x^T \\bs \\beta$ is the best aproximation to the observed inputs/outputs.\n",
-      "\n",
-      "We can express this problem as a least square minimization:\n",
-      "\n",
-      "* We write the observed inputs as a matrix $X = [\\bs{x_1, x_2, ..., x_m}]^T$, and the observed outputs as an vector of $\\bs y = [y_1, ..., y_m]^T$\n",
       "* $X \\bs \\beta = \\bs y$ is over-determined, no vector $\\bs \\beta$ solves the linear system exactly\n",
-      "* Instead, we find the $\\bs \\beta $ that minimizes $\\Vert X \\bs{\\beta - y}\\Vert_2$."
+      "* Instead, we find the $\\bs \\beta^* $ that minimizes $\\Vert X \\bs{\\beta - y}\\Vert_2$."
      ]
     },
     {
@@ -120,17 +117,17 @@
      "source": [
       "## Pseudo inverse:\n",
       "\n",
-      "$$ \\min_{\\bs {\\beta}} \\Vert X \\bs{\\beta - y} \\Vert_2$$\n",
+      "$$ \\bs \\beta^* = \\text{argmin}_{\\bs {\\beta}} \\Vert X \\bs{\\beta - y} \\Vert_2$$\n",
       "Which can be easily solved using Matrix calculus:\n",
       "\n",
-      "$$\\begin{array}{l}\n",
-      "\\Vert X \\bs{\\beta - y} \\Vert_2^2 &= (X \\bs{\\beta - y})^T (X \\bs{\\beta - y}) \\\\\n",
-      "&= \\bs{\\beta}^T X^T X \\bs{\\beta} - 2 \\bs{\\beta}^TX^T\\bs y + \\bs y^T\\bs y\\\\\n",
-      "\\frac{\\partial}{\\partial \\bs \\beta^T} \\Vert X \\bs{\\beta - y} \\Vert_2^2 &= 2 X^TX \\bs \\beta  - 2X^T \\bs y  = \\bs 0 \\\\\n",
-      "\\bs \\beta &= (X^TX)^{-1}X^T\\bs y\n",
-      "\\end{array}$$\n",
+      "$$\\begin{eqnarray}\n",
+      "\\Vert X \\bs{\\beta - y} \\Vert_2^2 &=& (X \\bs{\\beta - y})^T (X \\bs{\\beta - y}) \\\\\n",
+      "&=& \\bs{\\beta}^T X^T X \\bs{\\beta} - 2 \\bs{\\beta}^TX^T\\bs y + \\bs y^T\\bs y\\\\\n",
+      "\\frac{\\partial}{\\partial \\bs \\beta^T} \\Vert X \\bs{\\beta - y} \\Vert_2^2 &=& 2 X^TX \\bs \\beta  - 2X^T \\bs y  = \\bs 0 \\\\\n",
+      "\\bs \\beta^* &=& (X^TX)^{-1}X^T\\bs y\n",
+      "\\end{eqnarray}$$\n",
       "\n",
-      "* The solution is equivalent to linear regression.\n",
+      "* The solution is equivalent to linear regression, but beware the difference\n",
       "* $X^+ = (X^TX)^{-1}X^T$ is also known as the psuedo inverse of $X$ because $X^+X = I$\n",
       "  * note $XX^+$ is not even a valid matrix multiplication. "
      ]
@@ -169,10 +166,10 @@
       "\n",
       "Ridge regression adds a magnitude penalty to the objective function of least square: \n",
       "\n",
-      "$$\\begin{array}{l}  l(\\bs \\beta) &= \\Vert X \\bs{\\beta - y} \\Vert_2^2 + \\lambda \\Vert W \\bs \\beta \\Vert_2^2 \\\\ &=  \\bs{\\beta}^T X^T X \\bs{\\beta} - 2 \\bs{\\beta}^TX^T\\bs y + \\bs y^T \\bs y + \\lambda \\bs \\beta^T W^TW \\bs \\beta \\\\\n",
-      "\\frac{\\partial l}{\\partial \\bs \\beta^T} &= 2X^TX \\bs \\beta   - 2X^T \\bs y + 2 \\lambda W^T W \\bs \\beta = \\bs 0 \\\\\n",
-      "\\bs \\beta &= (X^TX + \\lambda W^TW)^{-1}X^T\\bs y\n",
-      "\\end{array}$$\n",
+      "$$\\begin{eqnarray} l(\\bs \\beta) &=& \\Vert X \\bs{\\beta - y} \\Vert_2^2 + \\lambda \\Vert W \\bs \\beta \\Vert_2^2 \\\\ &=&  \\bs{\\beta}^T X^T X \\bs{\\beta} - 2 \\bs{\\beta}^TX^T\\bs y + \\bs y^T \\bs y + \\lambda \\bs \\beta^T W^TW \\bs \\beta \\\\\n",
+      "\\frac{\\partial l}{\\partial \\bs \\beta^T} &=& 2X^TX \\bs \\beta   - 2X^T \\bs y + 2 \\lambda W^T W \\bs \\beta = \\bs 0 \\\\\n",
+      "\\bs \\beta &=& (X^TX + \\lambda W^TW)^{-1}X^T\\bs y\n",
+      "\\end{eqnarray}$$\n",
       "\n",
       "* $W$ is a diagonal weighting matrix for the elements in $\\bs \\beta$, e.g. $W = I$ is often a good start\n",
       "* $\\lambda$ is a scaler penalty rate"
@@ -333,7 +330,20 @@
       "\n",
       "$$ \\det(A - \\lambda I) = 0$$ \n",
       "\n",
-      "a polynomial equation of degree $n$:\n",
+      "a polynomial equation of degree $n$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Properties of eigenvalues\n",
+      "\n",
+      "For matrix $A$ of size $n \\times n$:\n",
       "* there can be $n$ distinct eigenvalues at most\n",
       "* eigenvalues can be negative or complex\n",
       "* $\\prod_{i}\\lambda_i = \\det( A )$\n",
@@ -429,7 +439,7 @@
       "\n",
       "$$\\begin{array}\n",
       "\\\\ l &= \\bs u^T A \\bs u - \\gamma (\\bs u^T \\bs u - 1) \\\\\n",
-      "\\frac{\\partial l}{\\partial \\bs u} &= 2 \\bs u^T A^T - 2\\gamma \\bs u^T = \\bs 0^T \\iff A \\bs u = \\gamma \\bs u\n",
+      "\\frac{\\partial l}{\\partial \\bs u^T} &= 2 A \\bs u - 2\\gamma \\bs u = \\bs 0 \\iff A \\bs u = \\gamma \\bs u\n",
       "\\end{array}$$\n",
       "\n",
       "* the solution must be an eigenvector \n",
@@ -514,31 +524,31 @@
       }
      },
      "source": [
-      "$$\\underbrace{\\pmatrix{\n",
+      "$$\\overbrace{\\pmatrix{\n",
       "* & * & * \\\\  \n",
       "* & * & * \\\\  \n",
       "* & * & * \\\\  \n",
       "* & * & * \\\\  \n",
       "* & * & * \\\\  \n",
       "* & * & *  \n",
-      "}}_A = \n",
-      "\\underbrace{\\pmatrix{\n",
+      "}}^A = \n",
+      "\\overbrace{\\pmatrix{\n",
       "* & * & * & * & * \\\\  \n",
       "* & * & * & * & * \\\\  \n",
       "* & * & * & * & * \\\\  \n",
       "* & * & * & * & * \\\\  \n",
       "* & * & * & * & * \\\\\n",
       "* & * & * & * & * \n",
-      "}}_Q \n",
+      "}}^Q \n",
       "\\;\\;\n",
-      "\\underbrace{\\pmatrix{\n",
+      "\\overbrace{\\pmatrix{\n",
       "* & * & * \\\\ \n",
       "0 & * & * \\\\ \n",
       "0 & 0 & * \\\\\n",
       "0 & 0 & 0 \\\\\n",
       "0 & 0 & 0 \\\\\n",
       "0 & 0 & 0 \n",
-      "}}_R$$\n",
+      "}}^R$$\n",
       "\n",
       "\n",
       "If $A$ is not fully ranked:\n",
@@ -707,16 +717,15 @@
      "source": [
       "## Householder transformation\n",
       "\n",
-      "* an orthogonal transformation representing reflection over a hyper plane, with a normal vector $\\hat {\\bs u}$ with unit L-2 norm: $\\Vert \\hat{\\bs u} \\Vert_2 = \\sqrt{\\hat {\\bs u}^T \\hat {\\bs u}} = 1$:\n",
+      "An orthogonal transformation representing reflection over a hyper plane, with a normal vector $\\hat {\\bs u}$ with unit L-2 norm:\n",
       "\n",
       "$$ H \\bs x = (I - {2\\bs{\\hat u \\hat u}^T}) \\bs x = \\bs x - 2 (\\hat{\\bs u}^T \\bs x) \\bs{\\hat u} $$\n",
       "\n",
-      "* Household transformation can reflect an arbitrary vector $\\bs x$ to $ \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1$, where $\\hat{\\bs e}_1$ can be any unit vector. \n",
+      "Household transformation can reflect an arbitrary vector $\\bs x$ to $ \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1$, where $\\hat{\\bs e}_1$ can be any unit vector. \n",
       "\n",
-      "$$ $$\n",
       "<center><img src = \"img/householder.png\" height=300 width=300></center>\n",
       "\n",
-      "* It is obvious from the figure that: $\\bs{\\hat u}$ must be in the direction of $\\bs u = \\frac{1}{2}\\left(\\bs x - \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1\\right)$."
+      "* It is obvious that: $\\bs{\\hat u}$ must be in the direction of $\\bs u = \\frac{1}{2}\\left(\\bs x - \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1\\right)$."
      ]
     },
     {
