--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -1741,12 +1741,32 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "$$\\exp(-9 r_9)\\exp(-(10-9) f_9^{10} ) = \\exp(-10 r_{10}) \\iff r_{10} = 0.9r_9 + 0.1f_9^{10} $$\n",
+      "$$\\begin{eqnarray}\n",
+      "\\exp(-10 r_{10}) &=& \\exp(-9 r_9)\\exp(-(10-9) f(9, 10) )  \\\\\n",
+      "r_{10} &=& 0.9r_9 + 0.1f(9, 10) \n",
+      "\\end{eqnarray}$$\n",
       "\n",
-      "* the $f_9^{10}$ is the 9Y to 10Y forward rate as observed at $t=0$.\n",
-      "* The correlation between spot rates are spurious because 10Y spot rate is largely determined by the 9Y spot rates.\n",
-      "* it makes no difference if we have unlimited precision, but we usually only keep few eigen vectors in PCA\n",
-      "* it's better to model the correlation/covariance matrix of forward rates"
+      "* the $f(9, 10)$ is the 9Y to 10Y forward rate.\n",
+      "* of course $r_{10} = f(0, 10)$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Correlated by construction\n",
+      "\n",
+      "$$ r_{10} = 0.9r_9 + 0.1f(9, 10) $$\n",
+      "\n",
+      "* The high correlation between spot rates to similar tenors are by construction\n",
+      "* PCA analysis can be misleading in percentage of variance explained\n",
+      "  * the variance of sot rates of short tenors are counted multiple times\n",
+      "* May not be a problem if we have unlimited precision, but we usually only keep the first few eigen vectors in PCA\n",
+      "* it's usually better to model the correlation/covariance matrix of forward rates"
      ]
     },
     {
