--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:9fc59b33a2009c6a33861399b5facd72d1ea925fd966a4d285f045aae09a372f"
+  "signature": "sha256:9485abeeca123477c37204dde8d7a77d43136d4222183d4c1e15c59a1ea78247"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -110,7 +110,7 @@
       "Given an unknown scalar function $\\renewcommand{bs}{\\boldsymbol} y = y(\\boldsymbol x)$, where the argument $\\bs x$ is a $n$ dimensional vector.\n",
       "\n",
       "* We have $m > n$ observations: $X$ represents inputs and $\\bs y$ represents outputs:\n",
-      " $$X = \\pmatrix{\\bs x_1 \\\\ \\bs x_2 \\\\ \\vdots \\\\ \\bs x_m}, \\;\\; \\bs y = \\pmatrix{y_1 \\\\ y_2 \\\\ \\vdots \\\\ y_m}$$\n",
+      " $$X = \\pmatrix{\\bs x_1^T \\\\ \\bs x_2^T \\\\ \\vdots \\\\ \\bs x_m^T}, \\;\\; \\bs y = \\pmatrix{y_1 \\\\ y_2 \\\\ \\vdots \\\\ y_m}$$\n",
       "* We want to find a factor loading vector $\\bs \\beta$ so that the linear function $\\hat y = \\bs x^T \\bs \\beta$ is the best aproximation to the observed inputs/outputs.\n",
       "* $X \\bs \\beta = \\bs y$ is over-determined, no vector $\\bs \\beta$ solves the linear system exactly\n",
       "* Instead, we find the $\\bs \\beta^* $ that minimizes $\\Vert X \\bs{\\beta - y}\\Vert_2$."
@@ -1433,8 +1433,8 @@
       "\n",
       "The eigenvectors and percentage explained, \n",
       "\n",
-      "* the first principal component explains more than 95% of the variance\n",
-      "* the first 3 principal components can be interpreted as level, slope and curvature of the curve\n",
+      "* the 1st principal component (PC) explains more than 95% of the variance\n",
+      "* the first 3 PCs can be interpreted as level, slope and curvature\n",
       "* note that the sign of the PC is insignificant"
      ]
     },
@@ -1578,7 +1578,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
       "## Dimension reduction - correlation matrix\n",
       "\n",
