--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:9485abeeca123477c37204dde8d7a77d43136d4222183d4c1e15c59a1ea78247"
+  "signature": "sha256:455ca04bdfd7479c1b67cc9f00e4a3e60b2668e7d412810f6e66638f74221b8b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1552,7 +1552,7 @@
       }
      },
      "source": [
-      "## Dimension reduction - covariance matrix\n",
+      "## Use PCA to drive simulation\n",
       "\n",
       "Given a generic $n$-dimensional SDE in vector form:\n",
       "\n",
@@ -1560,10 +1560,27 @@
       "\n",
       "* where $\\Sigma$ is a diagonal matrix of $\\sigma_i$ and $C$ is the correlation matrix of $\\rho_{ij}$.\n",
       "\n",
-      "Using the EVD of covariance matrix: $V = \\Sigma C \\Sigma = R \\Lambda R^T \\approx \\dot R \\dot \\Lambda \\dot R^T$\n",
-      "* The dotted version only retains the first $k$ eigen values\n",
-      "* $\\dot R$ is $n \\times k$ matrix, $\\dot \\Lambda$ is $k \\times k$ matrix.\n",
+      "Using the EVD to approximate the correlaiton or covariance matrix: \n",
       "\n",
+      "$$ \\begin{eqnarray} \n",
+      "V = \\Sigma C \\Sigma &=& R \\Lambda R^T \\approx \\dot R \\dot \\Lambda \\dot R^T \\\\\n",
+      "C &=& U\\Gamma U^T \\approx \\dot U \\dot \\Gamma \\dot U^T\n",
+      "\\end{eqnarray}\n",
+      "$$\n",
+      "\n",
+      "* The dotted version only retains the first $k$ eigen values\n",
+      "* $\\dot R$ is $n \\times k$ matrix, $\\dot \\Lambda$ is $k \\times k$ matrix."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Dimension reduction - covariance matrix\n",
       "We draw $\\Sigma \\delta \\bs w \\approx \\dot R \\dot L \\bs z \\sqrt{dt}$, \n",
       "* where $\\dot \\Lambda = \\dot L \\dot L$, $\\bs z$ is standard normal vector of length $k$.\n",
       "\n",
@@ -1612,7 +1629,7 @@
       }
      },
      "source": [
-      "## PCA is not scaling invariant\n",
+      "## PCA depends on scale\n",
       "\n",
       "Given the following two EVD on covariance and correlation matrix:\n",
       "\n",
