--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:455ca04bdfd7479c1b67cc9f00e4a3e60b2668e7d412810f6e66638f74221b8b"
+  "signature": "sha256:8b933e36a61cafb3cf6a3fb6307ca6538539b24707193b558b17f34bf8d0428f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1433,7 +1433,7 @@
       "\n",
       "The eigenvectors and percentage explained, \n",
       "\n",
-      "* the 1st principal component (PC) explains more than 95% of the variance\n",
+      "* the 1st principal component (PC) explains >95% of the variance\n",
       "* the first 3 PCs can be interpreted as level, slope and curvature\n",
       "* note that the sign of the PC is insignificant"
      ]
@@ -1552,24 +1552,25 @@
       }
      },
      "source": [
-      "## Use PCA to drive simulation\n",
+      "## Dimension reduction using PCA\n",
       "\n",
       "Given a generic $n$-dimensional SDE in vector form:\n",
       "\n",
       "$$\\renewcommand{Sigma}{\\mathcal{S}} d \\bs x = \\bs u dt + A \\Sigma d \\bs w, \\;\\;\\; d\\bs w d\\bs w^T = C dt$$\n",
       "\n",
-      "* where $\\Sigma$ is a diagonal matrix of $\\sigma_i$ and $C$ is the correlation matrix of $\\rho_{ij}$.\n",
+      "* $\\Sigma$ is a diagonal matrix of $\\sigma_i$ \n",
+      "* $C$ is the correlation matrix of $d \\bs w$, its covariance matrix $V = \\Sigma C \\Sigma$.\n",
       "\n",
       "Using the EVD to approximate the correlaiton or covariance matrix: \n",
       "\n",
       "$$ \\begin{eqnarray} \n",
-      "V = \\Sigma C \\Sigma &=& R \\Lambda R^T \\approx \\dot R \\dot \\Lambda \\dot R^T \\\\\n",
+      "V &=& R \\Lambda R^T \\approx \\dot R \\dot \\Lambda \\dot R^T \\\\\n",
       "C &=& U\\Gamma U^T \\approx \\dot U \\dot \\Gamma \\dot U^T\n",
       "\\end{eqnarray}\n",
       "$$\n",
       "\n",
       "* The dotted version only retains the first $k$ eigen values\n",
-      "* $\\dot R$ is $n \\times k$ matrix, $\\dot \\Lambda$ is $k \\times k$ matrix."
+      "* $\\dot R, \\dot U$ are $n \\times k$, $\\dot \\Lambda, \\dot \\Gamma$ are $k \\times k$."
      ]
     },
     {
@@ -1581,6 +1582,9 @@
      },
      "source": [
       "## Dimension reduction - covariance matrix\n",
+      "\n",
+      "$$ V = R \\Lambda R^T \\approx \\dot R \\dot \\Lambda \\dot R^T $$\n",
+      "\n",
       "We draw $\\Sigma \\delta \\bs w \\approx \\dot R \\dot L \\bs z \\sqrt{dt}$, \n",
       "* where $\\dot \\Lambda = \\dot L \\dot L$, $\\bs z$ is standard normal vector of length $k$.\n",
       "\n",
@@ -1588,7 +1592,7 @@
       "$$\\begin{eqnarray}\n",
       "\\mathbb E [\\Sigma\\delta \\bs w (\\Sigma\\delta \\bs w)^T] &=& \\mathbb E[(\\dot R \\dot L \\bs z \\sqrt{dt}) (\\dot R \\dot L \\bs z \\sqrt{dt})^T ]\n",
       "= \\dot R \\dot L \\mathbb E[\\bs z\\bs z^T] \\dot L \\dot R^T  dt \\\\\n",
-      "&=& \\dot R \\dot \\Lambda \\dot R^T dt \\approx S C S dt  = V dt\n",
+      "&=& \\dot R \\dot \\Lambda \\dot R^T dt = V dt\n",
       "\\end{eqnarray}\n",
       "$$"
      ]
@@ -1603,11 +1607,9 @@
      "source": [
       "## Dimension reduction - correlation matrix\n",
       "\n",
-      "Alternatively, we could use the EVD of correlation matrix for dimension reduction:\n",
-      "\n",
       "$$ C = U\\Gamma U^T \\approx \\dot U \\dot \\Gamma \\dot U^T $$\n",
       "\n",
-      "Then draw $\\delta \\bs w = \\dot U \\dot H \\bs z \\sqrt {dt}$, where $\\dot \\Gamma = \\dot H \\dot H$, we get the correct covariance:\n",
+      "We draw $\\delta \\bs w = \\dot U \\dot H \\bs z \\sqrt {dt}$, where $\\dot \\Gamma = \\dot H \\dot H$, we get the correct covariance:\n",
       "\n",
       "$$\\begin{eqnarray}\n",
       "\\mathbb E [\\Sigma\\delta \\bs w (\\Sigma\\delta \\bs w)^T] &=& S\\mathbb E[(\\dot U \\dot H \\bs z \\sqrt{dt}) (\\dot U \\dot H \\bs z \\sqrt{dt})^T ]S^T\n",
@@ -1648,10 +1650,10 @@
       }
      },
      "source": [
-      "However, this is not true because: $\\Sigma U \\ne U \\Sigma$, even when $\\Sigma$ is diagonal.\n",
+      "However, it is not true because: $\\Sigma U \\ne U \\Sigma$, even when $\\Sigma$ is diagonal.\n",
       " * one scale by row, another scale by column\n",
       "\n",
-      "It is more consistent to apply PCA on the covariance matrix."
+      "It is more consistent to apply PCA to the covariance matrix."
      ]
     },
     {
