--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:8b933e36a61cafb3cf6a3fb6307ca6538539b24707193b558b17f34bf8d0428f"
+  "signature": "sha256:5dd4d91d632f6bce91cde07e10d27cfedefaf0558bad851f8fa691242dafdb94"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1570,7 +1570,7 @@
       "$$\n",
       "\n",
       "* The dotted version only retains the first $k$ eigen values\n",
-      "* $\\dot R, \\dot U$ are $n \\times k$, $\\dot \\Lambda, \\dot \\Gamma$ are $k \\times k$."
+      "* $\\dot R, \\dot U$ are $n \\times k$ matrices; $\\dot \\Lambda, \\dot \\Gamma$ are $k \\times k$ matrices."
      ]
     },
     {
@@ -1639,7 +1639,7 @@
       "\n",
       "It is tempting to think they are equivalent as:\n",
       "$$ \\Sigma U \\Gamma U^T \\Sigma = U (\\Sigma \\Gamma \\Sigma) U^T $$\n",
-      "* thus $ \\Lambda = \\Sigma \\Gamma \\Sigma $, and eigen vectors remain unchanged"
+      "* if so, $ \\Lambda = \\Sigma \\Gamma \\Sigma $, and $R = U$, then we are happy"
      ]
     },
     {
