--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:5dd4d91d632f6bce91cde07e10d27cfedefaf0558bad851f8fa691242dafdb94"
+  "signature": "sha256:543530b2af3a775f6046a01bcb9eded89158e91de417659a714147893c0a13f0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1631,15 +1631,15 @@
       }
      },
      "source": [
-      "## PCA depends on scale\n",
+      "## PCA is scale variant\n",
       "\n",
       "Given the following two EVD on covariance and correlation matrix:\n",
       "\n",
       "$$R \\Lambda R^T = V = \\Sigma C \\Sigma = \\Sigma U \\Gamma U^T \\Sigma$$\n",
       "\n",
-      "It is tempting to think they are equivalent as:\n",
-      "$$ \\Sigma U \\Gamma U^T \\Sigma = U (\\Sigma \\Gamma \\Sigma) U^T $$\n",
-      "* if so, $ \\Lambda = \\Sigma \\Gamma \\Sigma $, and $R = U$, then we are happy"
+      "It is tempting to think they are equivalent:\n",
+      "* $\\Sigma U \\Gamma U^T \\Sigma = (\\Sigma U) \\Gamma (\\Sigma U)^T \\rightarrow \\Lambda = \\Gamma$ and $R = \\Sigma U$\n",
+      "* $\\Sigma U \\Gamma U^T \\Sigma = U (\\Sigma \\Gamma \\Sigma) U^T \\rightarrow \\Lambda = \\Sigma \\Gamma \\Sigma $, and $R = U$"
      ]
     },
     {
@@ -1650,8 +1650,9 @@
       }
      },
      "source": [
-      "However, it is not true because: $\\Sigma U \\ne U \\Sigma$, even when $\\Sigma$ is diagonal.\n",
-      " * one scale by row, another scale by column\n",
+      "However, they are not true because: \n",
+      "* $\\Sigma U$ is not diagonal: $(\\Sigma U)(\\Sigma U)^T = \\Sigma U U^T \\Sigma = \\Sigma\\Sigma \\ne I$\n",
+      "* $\\Sigma U \\ne U \\Sigma$, even when $\\Sigma$ is diagonal.\n",
       "\n",
       "It is more consistent to apply PCA to the covariance matrix."
      ]
